--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.98"
 axum = "0.8.4"
 chrono = "0.4.41"
 tokio = { version = "1.44.2", features = ["rt-multi-thread", "tracing", "macros", "signal"] }
+tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
