--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@corybuecker/analytics-collector",
   "version": "0.0.1-dev",
-  "description": "Privacy-centric analytics events aggregator with multiple storage integrations",
+  "description": "Privacy-first web analytics aggregator with multiple storage integrations",
   "homepage": "https://github.com/corybuecker/analytics-collector#readme",
   "bugs": {
     "url": "https://github.com/corybuecker/analytics-collector/issues"
