--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2024"
 anyhow = "1.0.98"
 axum = "0.8.4"
 chrono = "0.4.41"
+jsonschema = "0.30.0"
 libsql = { version = "0.9.5", default-features = false, features = ["core"] }
 opentelemetry = { version = "0.29.1" }
 opentelemetry-otlp = { version = "0.29.0" }
 opentelemetry_sdk = { version = "0.29.0" }
+serde_json = "1.0.140"
 tokio = { version = "1.44.2", default-features = false, features = ["rt-multi-thread", "tracing", "macros", "signal"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace"] }
