--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ libsql = { version = "0.9.5", default-features = false, features = ["core"] }
 opentelemetry = { version = "0.29.1" }
 opentelemetry-otlp = { version = "0.29.0" }
 opentelemetry_sdk = { version = "0.29.0" }
+prometheus-client = "0.23.1"
+serde = "1.0.219"
 serde_json = "1.0.140"
 tokio = { version = "1.44.2", default-features = false, features = ["rt-multi-thread", "tracing", "macros", "signal"] }
 tower = "0.5.2"
