--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,21 @@ version = "0.0.3-dev"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.98"
-axum = "0.8.4"
-chrono = "0.4.41"
-jsonschema = "0.30.0"
+anyhow = { version = "1.0.98" }
+axum = { version = "0.8.4" }
+chrono = { version = "0.4.41" }
+jsonschema = { version = "0.30.0" }
 libsql = { version = "0.9.7", default-features = false, features = ["core"] }
 opentelemetry = { version = "0.29.1" }
 opentelemetry-otlp = { version = "0.29.0" }
 opentelemetry_sdk = { version = "0.29.0" }
-prometheus-client = "0.23.1"
-serde = "1.0.219"
-serde_json = "1.0.140"
+prometheus-client = { version = "0.23.1" }
+serde = { version = "1.0.219" }
+serde_json = { version = "1.0.140" }
 tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "tracing", "macros", "signal"] }
 tokio-postgres = { version = "0.7.13" }
-tower = "0.5.2"
+tower = { version = "0.5.2" }
 tower-http = { version = "0.6.4", features = ["trace"] }
-tracing = "0.1.41"
-tracing-opentelemetry = "0.30.0"
-tracing-subscriber = "0.3.19"
+tracing = { version = "0.1.41" }
+tracing-opentelemetry = { version = "0.30.0" }
+tracing-subscriber = { version = "0.3.19" }
