--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@cory/analytics-collector",
-  "version": "0.0.5-dev",
+  "name": "@corybuecker/analytics-collector",
+  "version": "0.0.6-dev",
   "license": "Unlicense",
   "type": "module",
   "devDependencies": {
@@ -14,9 +14,7 @@
   },
   "homepage": "https://github.com/corybuecker/analytics-collector",
   "scripts": {
-    "compile": "rm -rf lib dist && tsc",
-    "prebuild": "npm run compile",
-    "build": "esbuild ./lib --bundle --minify --sourcemap --outfile=dist/index.js --target=es2021 --format=esm",
+    "build": "rm -rf lib dist && tsc",
     "build:watch": "nodemon --watch src --ext ts --exec 'npm run build'"
   },
   "exports": {
@@ -26,8 +24,5 @@
         "default": "./lib/index.js"
       }
     }
-  },
-  "files": [
-    "dist"
-  ]
+  }
 }
