--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ chrono = { version = "0.4.41" }
 jsonschema = { version = "0.30.0" }
 libsql = { version = "0.9.7", default-features = false, features = ["core"] }
 prometheus-client = { version = "0.23.1" }
+rust-database-common = { git = "https://github.com/corybuecker/rust-database-common", branch = "main" }
 rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
 serde = { version = "1.0.219" }
 serde_json = { version = "1.0.140" }
 tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "tracing", "macros", "signal"] }
-tokio-postgres = { version = "0.7.13" }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.4", features = ["trace"] }
 tracing = { version = "0.1.41" }
