--- a/.github/workflows/branch-protection.yaml
+++ b/.github/workflows/branch-protection.yaml
@@ -16,7 +16,10 @@ jobs:
       - run: cargo clippy --no-deps -- -D warnings
   test:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: "postgres://analytics_collector@localhost:5432/analytics_collector"
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+      - run: docker run -d -p 5432:5432 -e POSTGRES_HOST_AUTH_METHOD=trust -e POSTGRES_USER=analytics_collector -e POSTGRES_DB=analytics_collector -v ./migrations/schema.sql:/docker-entrypoint-initdb.d/schema.sql postgres:17.4
       - uses: actions-rust-lang/setup-rust-toolchain@9d7e65c320fdb52dcd45ffaa68deb6c02c8754d9
       - run: cargo test
