--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@corybuecker/analytics-collector",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "license": "MIT",
   "type": "module",
   "devDependencies": {
@@ -14,8 +14,10 @@
   },
   "homepage": "https://github.com/corybuecker/analytics-collector",
   "scripts": {
+    "prepublishOnly": "npm run build",
     "build": "rm -rf lib dist && tsc",
-    "build:watch": "nodemon --watch src --ext ts --exec 'npm run build'"
+    "build:watch": "nodemon --watch src --ext ts --exec 'npm run build'",
+    "build:integration": "esbuild --bundle --outfile=../tests/integration/src/build.js --format=esm src/index.ts --watch"
   },
   "exports": {
     ".": {
