--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ jsonschema = { version = "0.30.0" }
 libsql = { version = "0.9.11", default-features = false, features = ["core"] }
 parquet = { version = "55.1.0", features = ["arrow"] }
 prometheus-client = { version = "0.23.1" }
-reqwest = { version = "0.12.20", features = ["json"] }
+reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls", "json"] }
 rust-database-common = { git = "https://github.com/corybuecker/rust-database-common", branch = "main" }
 rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
 serde = { version = "1.0.219" }
