--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ rust-database-common = { git = "https://github.com/corybuecker/rust-database-com
 rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
 serde = { version = "1.0.219" }
 serde_json = { version = "1.0.140" }
+thiserror = "2.0.12"
 tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "tracing", "macros", "signal", "fs"] }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.4", features = ["trace"] }
 tracing = { version = "0.1.41" }
+urlencoding = "2.1.3"
 uuid = { version = "1.17.0", features = ["v4"] }
