--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ anyhow = { version = "1.0.98" }
 arrow = { version = "55.1.0" }
 arrow-schema = "55.2.0"
 axum = { version = "0.8.4" }
-chrono = { version = "0.4.41" }
+chrono = { version = "0.4.41", features = ["serde"] }
+futures-util = "0.3.31"
 jsonschema = { version = "0.30.0" }
-libsql = { version = "0.9.11", default-features = false, features = ["core"] }
+libsql = { version = "0.9.11", default-features = false, features = ["core", "serde", "stream"] }
 parquet = { version = "55.1.0", features = ["arrow"] }
 prometheus-client = { version = "0.23.1" }
 reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls", "json"] }
