--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "analytics-collector"
-version = "1.1.0"
+version = "2.0.0-dev"
 edition = "2024"
 
 [dependencies]
@@ -10,7 +10,6 @@ arrow-array = { version = "55.2.0" }
 arrow-schema = { version = "55.2.0" }
 axum = { version = "0.8.4" }
 chrono = { version = "0.4.41", features = ["serde"] }
-futures-util = { version = "0.3.31" }
 jsonschema = { version = "0.30.0" }
 libsql = { version = "0.9.11", default-features = false, features = ["core", "serde", "stream"] }
 parquet = { version = "55.2.0", features = ["arrow"] }
@@ -22,8 +21,13 @@ serde = { version = "1.0.219" }
 serde_json = { version = "1.0.140" }
 thiserror = { version = "2.0.12" }
 tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "tracing", "macros", "signal", "fs"] }
+tokio-stream = { version = "0.1.17" }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.4", features = ["trace"] }
 tracing = { version = "0.1.41" }
 urlencoding = { version = "2.1.3" }
 uuid = { version = "1.17.0", features = ["v4"] }
+
+[features]
+default = ["export-postgres"]
+export-postgres = []
