--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,6 @@ urlencoding = { version = "2.1.3" }
 uuid = { version = "1.17.0", features = ["v4"] }
 
 [features]
-default = ["export-postgres"]
+default = ["export-postgres", "export-parquet"]
 export-postgres = []
+export-parquet = []
