--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-th
 tokio-stream = { version = "0.1.17" }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.4", features = ["trace"] }
-tracing = { version = "0.1.41" }
+tracing = { version = "0.1.41", features = ["attributes"] }
 urlencoding = { version = "2.1.3" }
 uuid = { version = "1.17.0", features = ["v4"] }
 
